# calendar-app

./: Dockerfile  README.md  angular.json  docker-compose.yml  nginx.conf  package-lock.json  package.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: backend-deploy.yml  ci-checks.yml  deployment.yml  docker-image.yml  frontend-deploy.yml  frontend-test.yml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0003_project_remove_event_event_date_and_more.py
backend/: Dockerfile  Dockerfile.dev  compose.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend-v2/: HELP.md  build.gradle  settings.gradle
backend-v2/src/main/resources/: application.properties
backend/api/: models.py  serializers.py  views.py
backend/auth_app/: urls.py  views.py
backend/calendar_app/: admin.py  models.py  serializers.py  urls.py  views.py
backend/calendar_app/migrations/: 0001_initial.py  0002_alter_calendar_description_alter_event_description.py  0002_event_group_task.py  0002_remove_calendar_id_remove_event_id_and_more.py
backend/calendar_app/models/: __init__.py  calendar.py  event.py  event_calendar.py
backend/calendar_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/calendar_project/settings/: base.py  dev.py  prod.py
backend/pms_api/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .stylelintrc.json  Dockerfile  Dockerfile.dev  README.md  angular.json  compose.dev.yml  docker-compose.yml  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/.github/workflows/: docker-image.yml
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/components/auth/: auth.routes.ts
frontend/src/app/core/guards/: auth.guard.ts  authenticated.guard.ts  not-authenticated.guard.spec.ts  not-authenticated.guard.ts
frontend/src/app/core/models/: api.models.ts  auth-requests.models.ts  auth-responses.models.ts  auth.models.ts  calendar.models.ts
frontend/src/app/core/operators/: filter-list.operator.spec.ts  filter-list.operator.ts
frontend/src/app/core/services/: auth.service.spec.ts  auth.service.ts  calendar-api.service.spec.ts  calendar-api.service.ts  calendar-event-api.service.spec.ts  calendar-event-api.service.ts  event-api.service.ts  logging.service.ts
frontend/src/app/core/services/calendar-event-service/: calendar-event.service.ts
frontend/src/app/modules/auth/login-page/: login-page.component.html  login-page.component.spec.ts  login-page.component.ts
frontend/src/app/modules/calendar/: calendar-page.component.css  calendar-page.component.html  calendar-page.component.spec.ts  calendar-page.component.ts  calendar.module.ts
frontend/src/app/modules/calendar/calendar-canvas/: calendar-canvas.component.ts
frontend/src/app/modules/calendar/calendar-page/: calendar-page.component.ts
frontend/src/app/modules/calendar/day-container/: day-container.component.css  day-container.component.ts  day-container.module.ts
frontend/src/app/modules/calendar/event/: event.component.css  event.component.ts
frontend/src/app/modules/calendar/models/: api.models.ts  calendar.models.ts  day-positioning.models.ts  positioning.models.ts  week-positioning.models.ts
frontend/src/app/modules/calendar/services/: calendar-data.service.spec.ts  calendar-data.service.ts  calendar.service.spec.ts  calendar.service.ts  event-creation.service.spec.ts  event-creation.service.ts  event-editing.service.spec.ts  event-editing.service.ts  event.service.spec.ts  event.service.ts
frontend/src/app/modules/calendar/utils/: calendar-event.utils.spec.ts  calendar-event.utils.ts  day-positioning.utils.ts  interval-day.utils.spec.ts  interval-day.utils.ts  interval.utils.spec.ts  interval.utils.ts  positioning-utils.ts  week-positioning.utils.ts
frontend/src/environments/: environment.ts
pms/: settings.py
pms_api/: settings.py  urls.py
reverse-proxy/: Dockerfile  docker-compose.yml  nginx.conf
src/: index.html
src/app/: app.component.spec.ts  app.component.ts  app.module.ts
src/app/calendarPage/: calendar-event-implementation.ts  calendar-event.service.ts  calendar-event.ts
src/app/calendarPage/calendar-canvas/: calendar-canvas.component.css  calendar-canvas.component.html  calendar-canvas.component.spec.ts  calendar-canvas.component.ts  day-bounds.pipe.ts  full-day-events.pipe.ts  short-events-by-day.pipe.ts  string-to-date.pipe.ts
src/app/calendarPage/calendar-event-service/: calendar-event.service.ts  event-api-response.ts
src/app/calendarPage/day-column/: calendar-event-tree.ts  day-bounds.ts  day-column.component.css  day-column.component.html  day-column.component.ts  day-container.ts  get-new-event.pipe.ts  position-events-relative.pipe.ts  positioned-calendar-event.ts
src/app/calendarPage/day-column/pipes/: get-new-event.pipe.ts  position-events-relative.pipe.ts
src/app/calendarPage/event-component/: event-component.component.css  event-component.component.html  event-component.component.ts
src/app/calendarPage/grid-event/: grid-event.component.ts
src/app/calendarPage/new-event/: new-event.component.css  new-event.component.html  new-event.component.ts
src/app/calendarPage/new-event-form/: new-event-form.component.ts
src/app/calendarPage/relational-event/: relational-event.component.ts
src/app/calendarPage/week-row/: calendar-event-grid.ts  week-row.component.css  week-row.component.html  week-row.component.ts
src/app/core/models/: calendar-event.ts
src/app/core/services/calendar-event-service/: event-api-response.ts
src/app/modules/calendar/calendar-canvas/: calendar-canvas.component.css  calendar-canvas.component.html  calendar-canvas.component.ts
src/app/modules/calendar/day-container/: day-container.module.ts
src/app/modules/calendar/week-container/: week-container.module.ts
src/environments/: environment.development.ts  environment.ts
(+82 files in other folders)
