[tool.poetry]
name = "calendar-app-backend"
version = "0.1.0"
description = "The backend for a calendar application inspired by google cal and the ical format"
authors = ["blyedev <adam.smielewski@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.1.4"
djangorestframework = "3.15.2"
django-health-check = "3.18.3"
django-rest-knox = "5.0.2"
whitenoise = "6.8.2"
uuid = "1.30"
gunicorn = "^23.0.0"
psycopg = "^3.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
mypy = "^1.13.0"
django-stubs = "^5.1.1"
djangorestframework-stubs = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.django-stubs]
django_settings_module = "calendar_project.settings.dev"

[tool.mypy]
exclude = [
  "migrations",
  "tests",
  "manage.py",
  "(a|w)sgi.py",
]
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main"
]

[[tool.mypy.overrides]]
module = [
  "knox.*",
  "wagtail.*",
]
ignore_missing_imports = true

[tool.ruff]
extend-exclude = [
  "migrations",
  "manage.py",
]
line-length = 119

[tool.ruff.lint]
select = ["A", "B", "C4", "C90", "DJ", "I", "LOG", "N", "PTH", "RUF", "SIM", "W"]
ignore = ["RUF012"]

[tool.ruff.format]
